--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ header
 #social
 {
 	float: right;
-	margin: 20px 30px 0px 0px;
 
 }
 #social ul li
@@ -69,7 +68,7 @@ nav ul li a:hover
 {
 	color: #fff;
 }
-content
+article
 {
 	width: 655px;
 	float: left;
@@ -78,7 +77,7 @@ content
 	color: #57574c;
 	border-left: 3px solid #7c7063;
 }
-content h1
+article h1
 {
 	text-align:center;
 	border-bottom: 1px solid #7c7063;
@@ -92,19 +91,20 @@ p
 	text-align: justify;
 	
 }
-img
+article img
 {
 	float: right;
 	padding: 5px;
+	width: 400px;
 }
-content a
+article a
 {
 	font-size: 20px;
 	color: #7c7063;
 	display: block;
 	margin-bottom: 10px;
 }
-content a:hover
+article a:hover
 {
 	font-size: 20px;
 	color: #7c7063;
@@ -115,12 +115,15 @@ table
 	text-align: center;
 	margin: auto;
 	margin-bottom: 20px;
+	border: 1px; 
 }
 iframe
 {
 	display: block;
 	margin: auto;
 	border: 0px;
+	width: 560px;
+	height:315px;
 }
 footer
 {
