--- a/style.css
+++ b/style.css
@@ -37,7 +37,12 @@ header ul li
 {
 	float: left;
 	list-style: none;
-	margin: 5px;
+	margin-right:10px;
+}
+header ul li img
+{
+	height: 60px;
+	padding: 10px;
 }
 #sidebar
 {
