--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body
 	border-right: 6px solid #a09885;
 	overflow:auto; 
 	margin: 0 auto; 
-	padding: 10px;
+	padding: 0px;
 }
 
 header
@@ -22,27 +22,30 @@ header
 	width: 100%; 
 	height: 100px;
 	border-bottom: 6px solid #a09885;
+	padding-top: 20px;
 }
-header:nth-child(2)
+header img
 {
-	float:left;
-	margin: 15px 0px 0px 80px;
+	margin: 0px 0px 0px 80px;
 }
 header ul
 {
 	float: right;
-
+	margin: 8px 80px 8px 0px;
+	padding: 0px;
+	
 }
 header ul li
 {
-	float: left;
+	display: inline-block;
 	list-style: none;
-	margin-right:10px;
+	width: 70px;
+	padding: 0px 20px;
 }
 header ul li img
 {
 	height: 60px;
-	padding: 10px;
+	width: 60px;
 }
 #sidebar
 {
@@ -53,12 +56,14 @@ header ul li img
 nav
 {
 	height: 100%;
-
+}
+nav ul
+{
+	padding: 10px 20px;
 }
 nav ul li
 {
 	list-style: none;
-	padding: 5px;
 	text-align: center;
 }
 nav ul li a
@@ -77,19 +82,22 @@ article
 {
 	width: 655px;
 	float: left;
-	padding-left: 10px;
+	padding: 10px;
 	letter-spacing: 1px;
 	color: #57574c;
 	border-left: 3px solid #7c7063;
 }
-article h1
+section
+{
+	padding: 0px 15px;
+}
+section h1
 {
 	text-align:center;
 	border-bottom: 1px solid #7c7063;
-	padding: 5px;
 }
 
-p
+section p
 {
 	text-indent: 50px;
 	line-height: 25px;
@@ -99,7 +107,9 @@ p
 article img
 {
 	float: right;
-	padding: 5px;
+	margin: 0px 0px 15px 15px;
+	border-radius: 20px;
+	border: 2px solid #7c7063;
 	width: 400px;
 }
 article a
@@ -107,7 +117,9 @@ article a
 	font-size: 20px;
 	color: #7c7063;
 	display: block;
-	margin-bottom: 10px;
+	text-decoration: none;
+	text-align:center;
+	line-height: 40px;
 }
 article a:hover
 {
@@ -147,5 +159,5 @@ footer
 	font-size: 15px;
 	padding: 20px;
 	height: 40px;
-	border-top: 3px solid #7c7063;
+	border-top: 6px solid #a09885;
 }
